unpackaged/main/default/objects/nbavs__DialListReport__c/nbavs__DialListReport__c.object-meta.xml
<CustomObject>
    <label>Dial List Report</label>
    <nameField>
        <label>Dial List Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dial List Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>