unpackaged/main/default/objects/nbavs__DialListReport__c/fields/nbavs__Processed__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Processed__c</fullName>
    <formula>nbavs__Completed__c + nbavs__Unreachable__c + nbavs__Invalid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Processed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>