unpackaged/main/default/objects/nbavs__DialListReport__c/fields/nbavs__Processing__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Processing__c</fullName>
    <formula>nbavs__Pending__c + nbavs__InProgress__c + nbavs__Retry__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>In Progress</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>