unpackaged/main/default/objects/nbavs__DialListReport__c/fields/nbavs__Progress__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Progress__c</fullName>
    <formula>IF((nbavs__Scope__c + nbavs__Processing__c + nbavs__Processed__c) &gt; 0, nbavs__Processed__c / (nbavs__Scope__c + nbavs__Processing__c + nbavs__Processed__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Progress</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>