unpackaged/main/default/objects/nbavs__DialListReport__c/fields/nbavs__Retry__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Retry__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Retry</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>