unpackaged/main/default/objects/nbavs__DialListReport__c/fields/nbavs__Unreachable__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Unreachable__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Unreachable</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>